--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ license = "MIT"
 repository = "https://github.com/fourbs-net/diesel_full_text_search"
 
 [dependencies]
-diesel = { version = "1.4.8", features = ["postgres"] }
+diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres"] }
